--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gilgal</title>
+  <script>
+    // Force light mode by default - NO DARK MODE
+    (function () {
+      // ALWAYS remove dark class
+      document.documentElement.classList.remove("dark");
+      document.documentElement.style.colorScheme = "light";
+
+      // Always set to light
+      localStorage.setItem("gilgal-theme", "light");
+    })();
+  </script>
 </head>
 
 <body>
